style(frontend): polish homepage layout and auth UI

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
     },
-    "types": ["node", "astro/client"]
-  }
+    "types": ["node", "astro/client"],
+  },
 }
